# multiload-ng

./: .gitignore  AUTHORS  CONTRIBUTING.md  Changelog.md  Makefile.am  README.md  about-data.h  autogen.sh  configure.ac  generate-about-data-authors.sh  generate-about-data.sh  generate-about-data.sh.in  index.html  params.json
awn/: Makefile.am  awn-applet-multiload-ng.schema-ini  configure.m4  multiload-ng-awn.desktop.in.in  plugin.c
common/: Makefile.am  about-data.h  autoscaler.c  autoscaler.h  binary-data.h  colors-compat.c  colors.c  colors.h  filter.c  filter.h  graph-bat.c  graph-cpu.c  graph-data.h  graph-disk.c  graph-load.c  graph-mem.c  graph-net.c  graph-parm.c  graph-swap.c  graph-temp.c  gtk-compat.c  gtk-compat.h  info-file.c  info-file.h  linux-proc.c  linux-proc.h  load-graph.c  load-graph.h  multiload-colors.c  multiload-colors.h  multiload-config.c  multiload-config.h  multiload.c  multiload.h  preferences.c  preferences.h  properties.c  properties.h  ps-settings-impl-gkeyfile.inc  ps-settings-impl-gsettings.inc  (+4 more)
data/: Makefile.am  color-scheme-arc.xpm  color-scheme-colored-glass.xpm  color-scheme-default.xpm  color-scheme-dragon-ball-z.xpm  color-scheme-earth.xpm  color-scheme-fruity.xpm  color-scheme-jupiter.xpm  color-scheme-linux-mint.xpm  color-scheme-mars.xpm  color-scheme-moon.xpm  color-scheme-neptune.xpm  color-scheme-numix-dark.xpm  color-scheme-numix-light.xpm  color-scheme-simpsons.xpm  color-scheme-solarized-dark.xpm  color-scheme-solarized-light.xpm  color-scheme-super-mario-bros.xpm  color-scheme-tango.xpm  color-scheme-ubuntu-ambiance.xpm  color-scheme-ubuntu-radiance.xpm  color-scheme-uranus.xpm  color-scheme-venus.xpm  color-scheme-windows-metro.xpm  configure.m4  generate-about-data.sh.in  generate-binary-data.sh  generate-color-scheme-icons.sh  multiload-ng.preferences_gtk2.ui  multiload-ng.preferences_gtk3.ui  preferences_gtk2.ui  preferences_gtk3.ui
indicator/: Makefile.am  configure.m4  multiload-ng-indicator.desktop.in.in  plugin.c
libmultiload/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  libmultiload-2.pc.in
libmultiload/doc/: DoxygenLayout.xml  Makefile.am  custom_footer.html  custom_header.html  doc-pages.h  doxygen.config  style.css
libmultiload/icon/: Makefile.am
libmultiload/po/: Makevars  POTFILES.in  it.po  libmultiload.pot
libmultiload/src/: global.h  multiload.h
libmultiload/src/core/: caption.c  caption.h  config.c  config.h  dataset.c  dataset.h  debug.c  debug.h  direction.c  direction.h  memory.c  memory.h  orientation.c  orientation.h  types.h
libmultiload/src/drawing/: color.c  color.h  gradient.c  gradient.h  surface.c  surface.h
libmultiload/src/graph/: context.c  context.h  graph.c  graph.h  style.c  style.h  theme.c  theme.h  themes_repository.c  themes_repository.h  type.c  type.h
libmultiload/src/include/: multiload.c  multiload.h
libmultiload/src/multiload/: container.c  container.h  notifier.c  notifier.h  shared.c  shared.h  timer.c  timer.h
libmultiload/src/provider/: README.md  battery.c  battery.h  cpu.c  cpu.h  cpufreq.c  cpufreq.h  ctxtrate.c  ctxtrate.h  diskio.c  diskio.h  entropy.c  entropy.h  intrrate.c  intrrate.h  javascript.c  javascript.h  loadavg.c  loadavg.h  net.c  net.h  parametric.c  parametric.h  ping.c  ping.h  procrate.c  procrate.h  ram.c  ram.h  random.c  random.h  sockets.c  sockets.h  storage.c  storage.h  swap.c  swap.h  temperature.c  temperature.h  testfail.c  (+5 more)
libmultiload/src/resources/: Makefile.am
libmultiload/src/resources/themes/: arc.json  default.json
libmultiload/src/sys/: battery_info.c  battery_info.h  cpu_info.c  cpu_info.h  disk_info.c  disk_info.h  filesystem_info.c  filesystem_info.h  net_info.c  net_info.h  process_info.c  process_info.h  process_monitor.c  process_monitor.h  sys_info.c  sys_info.h  temperature_info.c  temperature_info.h
libmultiload/src/theme/: color.c  color.h  store.c  store.h  theme.c  theme.h
libmultiload/src/util/: ansi_colors.c  ansi_colors.h  arit.c  arit.h  assoc_array.c  assoc_array.h  grow_array.c  grow_array.h  grow_buffer.c  grow_buffer.h  infofile.c  infofile.h  io.c  io.h  json.c  json.h  string.c  string.h  system.c  system.h  zip.c  zip.h
lxpanel/: Makefile.am  configure.m4  lxpanel-multiload-plugin.c  plugin-old.c  plugin.c
mate/: Makefile.am  configure.m4  mate-multiload-plugin.c  multiload-applet-menu.xml  org.mate.multiload-nandhp.Applet.mate-panel-applet.in.in  org.mate.multiload-ng.Applet.mate-panel-applet.in.in  org.mate.multiload-ng.Applet.mate-panel-applet.in.in.in  org.mate.panel.applet.MultiloadNandhpFactory.service.in  org.mate.panel.applet.MultiloadNgFactory.service.in  org.mate.panel.applet.multiload-nandhp.gschema.xml.in  org.mate.panel.applet.multiload-ng.gschema.xml.in  org.mate.panel.applet.multiload-ng.gschema.xml.in.in  plugin.c
multiload/: Makefile.am  autoscaler.c  autoscaler.h  linux-proc.c  linux-proc.h  load-graph.c  multiload-colors.c  multiload-colors.h  multiload-config.c  multiload-config.h  multiload.c  multiload.h  netspeed.c  netspeed.h  properties.c  properties.h  util.c  util.h
standalone/: Makefile.am  configure.m4  multiload-ng-standalone.desktop.in.in  multiload-ng.desktop.in.in  plugin.c  standalone-multiload-plugin.c
systray/: Makefile.am  configure.m4  multiload-ng-systray.desktop.in.in  plugin.c
targets/server/: .gitignore  Makefile  Makefile.am  README.md  test-config.json
targets/server/src/: main.c  multiload-server.h
targets/server/src/core/: log.c  log.h  types.h  util.c  util.h
targets/server/src/http/: command.c  command.h  connection.c  connection.h  response.c  response.h  server.c  server.h
targets/server/static/: index.html  multiload.css  multiload.dialog.create.js  multiload.dialog.settings.js  multiload.js  multiload.ui.js
xfce4/: Makefile.am  configure.m4  multiload-ng-xfce4.desktop.in.in  multiload-ng.desktop.in.in  multiload.desktop.in.in  plugin.c  xfce4-multiload-dialogs.c  xfce4-multiload-dialogs.h  xfce4-multiload-plugin.c  xfce4-multiload-plugin.h  xfce4-multiload-settings.c  xfce4-multiload-settings.h
(+28 files in other folders)
